[package]
name = "tango"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
env_logger = "0.9.0"
webrtc = "0.4.0"
winit = "0.26.1"
rodio = "0.15.0"
pixels = "0.9.0"
zstd = "0.11.1+zstd.1.5.2"
const-zero = "0.1.0"
send_wrapper = "0.5.0"
lazy_static = "1.4.0"
vsprintf = "2.0.0"
winit_input_helper = "0.11.1"
log = "0.4"
imgui = "0.8"
imgui-wgpu = "0.19"
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }
tokio = { version = "1.15.0", features = ["full"] }
parking_lot = "0.12.0"
rand = "0.8.5"
sha3 = "0.10.1"
prost = "0.10"

[build-dependencies]
bindgen = "0.53.1"
