[package]
name = "tango"
version = "2.0.0-0.0.2"
edition = "2021"
license = "AGPL-3.0-or-later"
default-run = "tango"

[dependencies]
anyhow = "1.0"
env_logger = "0.9.0"
webrtc = "0.4.0"
winit = { version = "0.26.1", features = ["serde"] }
wgpu = { version = "0.12", features = ["angle"] }
cpal = "0.13.5"
pixels = "0.9.0"
zstd = "0.11.1"
lazy_static = "1.4.0"
log = "0.4"
egui = "0.17"
egui_wgpu_backend = "0.17"
egui-winit = { version = "0.17", default-features = false, features = ["links", "clipboard"] }
tokio = { version = "1.15.0", features = ["full"] }
parking_lot = { version = "0.12.0", features = ["deadlock_detection"] }
rand = "0.8.5"
sha3 = "0.10.1"
tokio-util = "0.7.1"
tokio-stream = "0.1.8"
subtle = "2.4"
rand_pcg = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
fluent-templates = "0.7.1"
unic-langid = "0.9"
sys-locale = "0.2.0"
git-version = "0.3.5"
bytes = "1.1.0"
bincode = "1.3.3"
byteorder = "1.4.3"
time = { version = "0.3.9", features = ["formatting", "macros"] }
futures-util = "0.3.21"
clap = { version = "3.1", features = ["derive"] }
tango-matchmaking = { path = "../tango-matchmaking" }
mgba = { path = "../mgba" }
native-dialog = "0.6.3"
indicatif = "0.16"
tempfile = "3.3.0"

[patch.crates-io]
webrtc-util = { git = "https://github.com/webrtc-rs/util", rev = "2d193c0fd146e4d48ce63d07dbd085702b60aac2" }

[build-dependencies]
winres = "0.1"
